<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">No movies found</string>
    <string name="movie_art_description">movie art</string>
    <string name="btBack">Back</string>
    <string name="release_date_date_label">Release Date:</string>
    <string name="synopsisLabel">Synopsis:</string>
    <string name="ratingLabel">Rating:</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="favorites">Favorites</string>
    <string name="offline_toast">Offline, Check your internet connection!</string>
    <string name="favorite_add_success">%s was added to your favorites!</string>
    <string name="favorite_remove_success">%s was removed from your favorites!</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="movie_poster">movie poster</string>
</resources>
