<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.view.MovieDetailActivity"
    tools:layout_editor_absoluteY="81dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
                    tools:text="@android:string/dialog_alert_title" />

                <TextView
                    android:id="@+id/textViewRatting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/ratingLabel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

                <TextView
                    android:id="@+id/tv_movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=""
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewRatting"
                    app:layout_constraintStart_toEndOf="@+id/textViewRatting"
                    app:layout_constraintTop_toTopOf="@+id/textViewRatting"
                    tools:text="10.0" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/release_date_date_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/textViewRatting"
                    app:layout_constraintTop_toBottomOf="@+id/textViewRatting" />

                <TextView
                    android:id="@+id/tv_movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=""
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
                    app:layout_constraintStart_toEndOf="@+id/textViewDate"
                    app:layout_constraintTop_toTopOf="@+id/textViewDate"
                    tools:text="20-12-2020" />

                <TextView
                    android:id="@+id/textViewSynopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/synopsisLabel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/textViewDate"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

                <TextView
                    android:id="@+id/tv_movie_synopsis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:text=""
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewSynopsis"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSynopsis"
                    tools:text=" djkahdsadkja haslkdja;lsdk;asjdl bjksafhasjl lhafhsfhalfhsahdjhajkdajkgfahsdlkajsdlkk \n gdsgadgsaiduagdiyusagdiu" />

                <CheckBox
                    android:id="@+id/cb_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:button="@drawable/bt_favorite_selector"
                    android:onClick="toggleFavorite"
                    android:padding="5dp"
                    android:text="@string/favorites"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewRatting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textViewRatting" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="@+id/tv_movie_synopsis"
                    app:layout_constraintStart_toStartOf="@+id/tv_movie_synopsis"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_synopsis" />

                <TextView
                    android:id="@+id/tv_trailer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/trailers"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    tools:text="Trailers" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_trailer"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_trailer"
                    app:layout_constraintTop_toBottomOf="@+id/tv_trailer" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="@+id/rvTrailers"
                    app:layout_constraintStart_toStartOf="@+id/rvTrailers"
                    app:layout_constraintTop_toBottomOf="@+id/rvTrailers" />

                <TextView
                    android:id="@+id/tv_review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/reviews"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view1"
                    app:layout_constraintTop_toBottomOf="@+id/view1"
                    tools:text="Reviews" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_review"
                    app:layout_constraintStart_toStartOf="@+id/tv_review"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_detail_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>